Fixed overflow

--- a/style.css
+++ b/style.css
@@ -143,7 +143,6 @@ transparent black text box over it, with the upper margin being the same percent
 @media (max-width: 1000px){
     .footer{
         align-items: center;
-        margin-left: 35%;
     }
     .footer table, td{
         display: block;
